[package]
name = "lottery"
version = "0.1.0"
authors = ["Hitesh evostorm96@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
rand = "0.8.3"

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "flipper"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

